--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,6 @@ body {
   margin:0;
   height:100%;
   padding: 0;
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
